...
                app:layout_constraintEnd_toEndOf="@+id/salary"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/dollarSignText"
                app:layout_constraintTop_toBottomOf="@+id/salary" />

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="bottom"
                android:textColor="@color/soft_error_red"
                app:layout_constraintBottom_toTopOf="@+id/employerEmail"
...
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="@+id/jobLocationText"
                app:layout_constraintStart_toEndOf="@+id/dollarSignText"
                app:layout_constraintTop_toBottomOf="@+id/jobLocationText" />

            <Button
                android:id="@+id/applyButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="196dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/cash_green_dark"
                android:text="@string/APPLY"
...
