<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appHeader"
        layout="@layout/header_quick_cash"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resetPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/RESET_PASSWORD"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayout_resetEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/prStatusLabel"
        app:layout_constraintStart_toStartOf="@+id/prStatusLabel"
        app:layout_constraintTop_toBottomOf="@+id/prStatusLabel" >

        <EditText
            android:id="@+id/recoveryEmailInput"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="336dp"
            android:hint="@string/HINT_EMAIL"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintWidth_percent="0.9" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cash_green_dark"
        android:text="@string/RESET"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textLayout_resetEmail"
        app:layout_constraintStart_toStartOf="@+id/textLayout_resetEmail"
        app:layout_constraintTop_toBottomOf="@+id/textLayout_resetEmail" />

    <TextView
        android:id="@+id/prStatusLabel"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:gravity="bottom"
        android:textColor="@color/soft_error_red"
        app:layout_constraintEnd_toEndOf="@+id/resetPasswordTitle"
        app:layout_constraintStart_toStartOf="@+id/resetPasswordTitle"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>